# DG_advection_reaction_suite

./: README.md
DG_time_dependent/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main_time_dependent.cc
DG_time_dependent/include/: DG_upwind.h
DG_time_dependent/source/: DG_upwind_time_dependent.cc
DG_upwind/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  DG_upwind  Makefile  README.md  cmake_install.cmake  main.cc  parameters.prm  solution-0.vtk  solution-1.vtk  solution-2.vtk  solution-3.vtk  solution-4.vtk  solution-5.vtk
DG_upwind/include/: DG_upwind.h  DG_upwind_tester.h
DG_upwind/source/: DG_upwind.cc
DG_upwind/tests/: DG_upwind_tester.cc
Error_estimator/: CMakeLists.txt  README.md  main.cc
Error_estimator/include/: DG_advection_reaction.h
Error_estimator/source/: DG_advection_reaction.cc
